# substack-kindle

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  greptile.json  pyproject.toml
.claude/commands/: deliver.md
.github/workflows/: ci.yml  live-e2e.yml
docs/: dev-loop.md  spike-runbook.md
docs/setup/: operator-postmark.md  user-onboarding.md
docs/superpowers/plans/: 2026-05-25-end-to-end-spike.md
src/substack_kindle/: __init__.py  amazon_approval.py  cli.py  collection.py  config_store.py  dedup.py  digest_title.py  epub_builder.py  fetch.py  gmail_api.py  gmail_oauth.py  handler.py  ids.py  job_epub.py  job_store.py  merge_gate.py  notify.py  onboarding.py  onboarding_verification.py  parsing.py  pipeline.py  postmark.py  postmark_transport.py  processed_state.py  rss_fetch.py  runner.py  scheduler.py  sender_registration.py  service_version.py  size_budget.py  spike.py  substack_clean.py  whitelist_check.py
src/substack_kindle/adapters/: __init__.py  gmail_messages.py  json_store.py  postmark_http.py
tests/: test_acceptance_edge_cases.py  test_amazon_approval.py  test_cli.py  test_cli_init.py  test_cli_run.py  test_cli_seed.py  test_collection.py  test_config_store.py  test_dedup.py  test_digest_title.py  test_e2e_live_account.py  test_e2e_serverless.py  test_epub_builder.py  test_fetch.py  test_gmail_api.py  test_gmail_messages.py  test_gmail_oauth.py  test_ids.py  test_job_epub.py  test_job_store.py  test_json_store.py  test_merge_gate.py  test_notify.py  test_onboarding.py  test_onboarding_verification.py  test_parse_to_epub.py  test_parsing.py  test_pipeline.py  test_postmark.py  test_postmark_http.py  test_postmark_transport.py  test_processed_state.py  test_rss_fetch.py  test_runner.py  test_scheduler.py  test_sender_registration.py  test_service_version.py  test_size_budget.py  test_smoke.py  test_spike.py  (+2 more)
tests/fixtures/: edge_case_newsletter.html
