[project]
name = "substack-kindle"
version = "0.0.1"
description = "Newsletter-to-Kindle service: Gmail (read-only) -> EPUB -> Kindle via Postmark."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    # Deterministic Markdown->XHTML + one-EPUB-per-job assembly with TOC (SAT-246).
    "markdown>=3.5",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/substack_kindle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
