[project]
name = "substack-kindle"
version = "0.0.1"
description = "Newsletter-to-Kindle service: Gmail (read-only) -> EPUB -> Kindle via Postmark."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    # Deterministic body conversion + EPUB assembly. No LLM in these paths.
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "markdown>=3.5",
    "ebooklib>=0.18",
    # Production end-to-end CLI (SAT-269): read-only Gmail + Postmark REST.
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",
]

[project.scripts]
substack-kindle = "substack_kindle.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/substack_kindle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
